create updateBooking route
