# source/routes/bookings.ts
@@ -1,8 +1,9 @@
-import express from 'express';
-import controller from '../controllers/bookings';
+import express from "express";
+import controller from "../controllers/bookings";
 const router = express.Router();
 
-router.get('/', controller.healthCheck);
-router.post('/api/v1/booking/', controller.createBooking);
+router.get("/", controller.healthCheck);
+router.post("/api/v1/booking/", controller.createBooking);
+router.patch("/api/v1/booking/:id", controller.updateBooking);
 
 export = router;
